tests/sksl/errors/ReservedNameCast.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'cast'
1 error
